<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background">
    <!--xmlns:tools="http://schemas.android.com/tools" may need this in the future-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/quick_challenge"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@color/primary_icon"
        android:contentDescription="@string/biking_button"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/primary_icon"
        android:contentDescription="@string/walking_button"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/primary_icon"
        android:contentDescription="@string/running_button"
        app:cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/walking_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/man_walking" />

    <TextView
        android:id="@+id/walkingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="164dp"
        android:text="@string/walking_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bikingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="164dp"
        android:text="@string/biking_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/runningLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginTop="164dp"
        android:text="@string/running_button"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="176dp"
        android:contentDescription="@string/running_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/run" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/biking_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bicycle_rider" />

    <FrameLayout
        android:layout_width="315dp"
        android:layout_height="200dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/frame_layout_background"
        android:radius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/individualChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:paddingTop="8dp"
            android:text="@string/individual_challenge"
            android:textColor="#000000"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/individual1"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/secondary_icon"
            android:contentDescription="@string/individual1"
            android:text="@string/individual1"
            android:textColor="#000000"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/individual2"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary_icon"
            android:contentDescription="@string/individual2"
            android:text="@string/individual2"
            android:textColor="#000000"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/individual3"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/secondary_icon"
            android:contentDescription="@string/individual3"
            android:text="@string/individual3"
            android:textColor="#000000"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="315dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/frame_layout_background"
        android:radius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/teamChallenges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:paddingTop="8dp"
            android:text="@string/team_challenge"
            android:textColor="#000000"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/team1"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/secondary_icon"
            android:contentDescription="@string/team1"
            android:text="@string/team1"
            android:textColor="#000000"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/team2"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/secondary_icon"
            android:contentDescription="@string/team2"
            android:text="@string/team2"
            android:textColor="#000000"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/team3"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/secondary_icon"
            android:contentDescription="@string/team3"
            android:text="@string/team3"
            android:textColor="#000000"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/formTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:text="@string/enter_details"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/distanceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_distance"
            android:inputType="number" />

        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/units_array" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>