<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--xmlns:tools="http://schemas.android.com/tools" may need this in the future-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/current_challenge"
        android:textSize="32sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="315dp"
        android:layout_height="100dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/frame_layout_background"
        android:radius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/walkingChallenge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/walking_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/man_walking" />

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="70dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/secondary_icon"
            android:scaleY="3.5"
            android:progress="80"
            android:layout_width="220dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/challenge1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="15dp"
            android:text="@string/current1"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/challenge1progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="96dp"
            android:text="@string/current1_progress"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="315dp"
        android:layout_height="100dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/frame_layout_background"
        android:radius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/runningChallenge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/running_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/run" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/progressBarStyle"
            android:progressBackgroundTint="#ffffffff"
            android:progressTint="@color/secondary_icon"
            android:layout_width="220dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="70dp"
            android:indeterminate="false"
            android:progress="50"
            android:scaleY="3.5" />

        <TextView
            android:id="@+id/challenge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="15dp"
            android:text="@string/current2"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/challenge2progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="92dp"
            android:text="@string/current2_progress"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="315dp"
        android:layout_height="100dp"
        android:layout_marginTop="352dp"
        android:background="@drawable/frame_layout_background"
        android:radius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cycleChallenge"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/biking_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bicycle_rider" />

        <ProgressBar
            android:id="@+id/progressBar3"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="70dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/secondary_icon"
            android:scaleY="3.5"
            android:progress="65"
            android:layout_width="220dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/challenge3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="15dp"
            android:text="@string/current3"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/challenge3progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="85dp"
            android:text="@string/current3_progress"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>